# OC7---Projet-RAG-Assistant-Intelligent-Events

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  LICENSE  README.md  app.py  docker-compose.yml  main.py  package-lock.json  package.json  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
backend/: CONTRIBUTING.md  Dockerfile  README.md  alembic.ini  app.py  pyproject.toml  render.yaml
backend/alembic/: INSTALLATION.md  QUICKSTART.md  README.md  __init__.py  env.py
backend/alembic/versions/: 001_initial_schema.py
backend/docs/livrables/: 01-RAPPORT-TECHNIQUE.md  02-GUIDE-UTILISATION.md  03-DOCUMENTATION-API.md  ARCHITECTURE.md  README.md  SOUTENANCE-QA-TECHNIQUE.md
backend/docs/livrables/annexes/: ameliorations-futures.md
backend/docs/livrables/annexes/schemas/: pipeline-rag.txt
backend/docs/livrables/donnees-evaluation/: evaluation-results.json  exemples-reponses.md
backend/docs/livrables/presentation/: RAG Events Assistant Presentation.pptx
backend/notebooks/: 03_create_embeddings_mistral.ipynb  04_build_faiss_index.ipynb  05_rag_chatbot_mistral.ipynb
backend/scripts/: __init__.py  api_test.py  evaluate_rag.py  migrate_index.py  verify_alembic.py
backend/src/api/: main.py
backend/src/config/: constants.py  settings.py
backend/src/data/: models.py
backend/src/database/: __init__.py  connection.py  models.py  repository.py
backend/src/rag/: embeddings.py  engine.py  index_builder.py  vectorstore.py
backend/tests/: conftest.py
backend/tests/data/: test_questions.json
backend/tests/e2e/: test_rag_pipeline.py
backend/tests/integration/: test_api.py
backend/tests/unit/: test_models.py  test_rag_engine.py
docs/: COMPRENDRE_LE_RAG.md  CONTENEURISATION_DOCKER.md  GUIDE_DEMARRAGE.md  GUIDE_LANGCHAIN.md  Guide complet projet RAG.md  INTEGRATION_LANGCHAIN.md  PLAN_MIGRATION_LANGCHAIN.md  TESTS_ET_EVALUATION_RAGAS.md  guide-pyproject-toml.md
docs/livrables/: 01-RAPPORT-TECHNIQUE.md  04-RESULTATS-EVALUATION.md  05-TESTS-ET-QUALITE.md  README.md
docs/livrables/annexes/: architecture-complete.md  choix-technologiques.md
docs/livrables/annexes/schemas/: architecture-globale.txt
docs/livrables/donnees-evaluation/: test-coverage-report.txt
frontend/: Dockerfile  README.md  nginx.conf  package-lock.json  package.json  tailwind.config.js  vercel.json  vite.config.ts
frontend/docs/: CHAT_IMPLEMENTATION.md
frontend/src/: App.tsx  index.css
frontend/src/components/common/: ResponseViewer.tsx
frontend/src/components/layout/: AppLayout.tsx  Header.tsx  Sidebar.tsx
frontend/src/components/ui/: accordion.tsx  badge-variants.ts  badge.tsx  checkbox.tsx  dialog.tsx  textarea.tsx
frontend/src/features/api-explorer/: ApiExplorerView.tsx  ChatTab.tsx  HealthTab.tsx  RebuildTab.tsx  SearchTab.tsx  SessionTab.tsx
frontend/src/features/chat/: ARCHITECTURE.md  ChatHistory.tsx  ChatSettings.tsx  ChatView.tsx  MessageInput.tsx  MessageList.tsx  README.md  SourcesAccordion.tsx  index.ts
frontend/src/features/index-management/: IndexInfo.tsx  IndexManagementView.tsx  ProgressTracker.tsx  RebuildForm.tsx  index.ts  useRebuildStatus.ts
frontend/src/features/monitoring/: HealthStatus.tsx  MetricCard.tsx  MonitoringView.tsx  index.ts  useHealthPolling.ts
frontend/src/features/ragas-metrics/: MetricsCharts.tsx  MetricsSummary.tsx  RagasView.tsx  ResultsTable.tsx  UploadReport.tsx  index.ts  useRagasStore.ts
frontend/src/hooks/: useDebounce.ts
frontend/src/lib/api/: client.ts  endpoints.ts  error-types.ts  types.ts
frontend/src/lib/utils/: date.ts  format.ts  index.ts
frontend/src/store/: useAppStore.ts  useChatStore.ts
notebooks/: 01_data_collection.ipynb  02_data_preprocessing.ipynb  README.md
scripts/: api_test.py  evaluate_rag.py  migrate_index.py
src/: __init__.py
src/api/: main.py
src/config/: constants.py  settings.py
src/data/: models.py
src/rag/: __init__.py  embeddings.py  engine.py  index_builder.py  llm.py
tests/: conftest.py
tests/e2e/: test_rag_pipeline.py
tests/integration/: test_api.py
tests/unit/: test_rag_engine.py
